Kleopatra: Entries in certificate drop-down are not sorted
Closed, ResolvedPublic

Assigned To
Authored By
• ikloecker
May 17 2023, 10:24 AM
Tags

Description

The entries in the certificate drop-down (e.g. used for the signing certificate and encrypt-to-self certificate in Notepad or Sign/Encrypt dialog) are not sorted alphabetically which makes it difficult to find an entry in the list.

People with just a few own certificates, i.e. the majority of users, probably didn't notice or didn't care. But it's still a usability/accessibility problem and it's a major pain if one has a large number of test certificates.

Event Timeline

• ikloecker triaged this task as Normal priority.
• ikloecker created this task.
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ikloecker changed the task status from Open to Testing.Jun 1 2023, 10:49 AM
• ikloecker removed • ikloecker as the assignee of this task.
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

When testing please note that the last changes (i.e. "Ignore expired subkeys when looking for newest subkey" and ""Sort by fingerprint as last resort for deterministic sort order") have not been merged to the gpg4win/3.1.27 branch.

• ebo claimed this task.
• ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ebo added a subscriber: • ebo.

works. Certificates are shown in alphabetical order to the user and expired subkeys are ignored for encryption even if they are newer.