Fix sorting of entries

We need to call the mapping function of the super class because it
reorders the entries (by sorting them with our lessThan). Going directly
to the source model ignored to reordering and lead to an unsorted list.

GnuPG-bug-id: 6492